# tree-sitter-bend

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  test.bend
bindings/rust/: build.rs  lib.rs
grammar/: common.js  constants.js  fun.js  imp.js  utils.js
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: expressions.txt  fun-top-level-definitions.txt  imp-statements.txt  imp-top-level-definition.txt  literals.txt  terms.txt
