[package]
name = "tree-sitter-bend"
description = "Tree-sitter grammar for the Bend programming language"
version = "0.2.37-alpha.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bend"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/HigherOrderCO/tree-sitter-bend"
edition = "2021"
homepage = "https://higherorderco.com/"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.1.13"
